--- a/service/pom.xml
+++ b/service/pom.xml
@@ -8,9 +8,8 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>service</artifactId>
     <packaging>pom</packaging>
+    <artifactId>service</artifactId>
     <modules>
         <module>service_edu</module>
         <module>service_oss</module>
@@ -138,6 +137,12 @@
                 <filtering>false</filtering>
             </resource>
         </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
     </build>
 
 </project>
